# mcp-trust-radar

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: agent-attestation.json  servers.json
src/mcp_trust_radar/: __init__.py  attestation.py  cli.py  github_client.py  models.py  report.py  scoring.py
src/mcp_trust_radar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_attestation.py  test_cli.py  test_scoring.py
