[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-trust-radar"
version = "0.1.0"
description = "Trust scoring for MCP servers using permissions, maintenance health, and repository signals."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31"]

[project.scripts]
mcp-radar = "mcp_trust_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
